<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/contact_detail_margin"
    android:orientation="vertical">

    <include layout="@layout/contact_detail_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/contact_detail_personal_info_height"
        android:layout_marginTop="@dimen/contact_detail_vertical_margin"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/contact_detail_large_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/favorite_selected"
            android:layout_weight="1"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/contact_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/contact_detail_label_text_size"
                android:text="@string/details_name"/>

            <TextView
                android:id="@+id/contact_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/contact_name_label"
                android:textStyle="bold"
                android:text="@string/details_name"/>

            <TextView
                android:id="@+id/contact_company_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/contact_company"
                android:textSize="@dimen/contact_detail_label_text_size"
                android:text="@string/details_company"/>

            <TextView
                android:id="@+id/contact_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:textStyle="bold"
                android:text="@string/details_company"/>

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/contact_phone_label"
        android:layout_marginTop="@dimen/contact_detail_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/contact_detail_label_text_size"
        android:text="@string/details_phone"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/contact_phone_work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:textStyle="bold"
            android:text="252-907-8676"/>

        <TextView
            android:id="@+id/work_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textStyle="bold"
            android:text="@string/details_work"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/contact_phone_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:textStyle="bold"
            android:text="252-907-8676"/>

        <TextView
            android:id="@+id/home_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textStyle="bold"
            android:text="@string/details_home"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/contact_phone_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:textStyle="bold"
            android:text="252-907-8676"/>

        <TextView
            android:id="@+id/mobile_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textStyle="bold"
            android:text="@string/details_mobile"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/contact_address_label"
        android:layout_marginTop="@dimen/contact_detail_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/contact_detail_label_text_size"
        android:text="@string/details_address"/>

    <TextView
        android:id="@+id/contact_address_street"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="123 Fake St."/>

    <TextView
        android:id="@+id/contact_address_city_zip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="Chicago, IL 60606"/>

    <TextView
        android:id="@+id/contact_birthday_label"
        android:layout_marginTop="@dimen/contact_detail_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/contact_detail_label_text_size"
        android:text="@string/details_birthday"/>

    <TextView
        android:id="@+id/contact_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="April, 25 1990"/>

    <TextView
        android:id="@+id/contact_email_label"
        android:layout_marginTop="@dimen/contact_detail_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/contact_detail_label_text_size"
        android:text="@string/details_email"/>

    <TextView
        android:id="@+id/contact_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="Myemail@gmail.com"/>

</LinearLayout>